<?xml version="1.0"?>
<package format="2">
  <name>z_laser_projector</name>
  <version>0.0.0</version>
  <description>
    <p>
      The z_laser_projector package is a ROS wrapper for ZLP1 Z-LASER Projector, 
      that makes it fully compatible with all available sensors and devices running 
      over the ROS-Industrial project. This package provides libraries that allow 
      the user to operate the device and simplify the task of developing further advanced 
      features, such as augmented reality applications.
    </p>
  </description>
  <url>http://wiki.ros.org/z_laser_projector</url>
  <author email="rluque@catec.aero">Rafael Luque </author>
  <author email="imlara@catec.aero">Ines M. Lara </author>
  <maintainer email="rluque@catec.aero">Rafael Luque </maintainer>
  <maintainer email="imlara@catec.aero">Ines M. Lara </maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>python-catkin-pkg</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>    
  </export>

</package>
