<?xml version="1.0"?>
<package format="2">
  <name>z_laser_projector</name>
  <version>0.0.0</version>
  <description>
    <p>
      The z_laser_projector stack is a set of tools that allow 
      the user to operate the Z-LASER Projector ZLP1 and simplify 
      the task of developing further advanced features, such as 
      augmented reality applications. The stack provides a ROS API 
      to control the device via topics and services, a visualizer for 
      laser projections and a graphical interface.
    </p>
  </description>
  <url>http://wiki.ros.org/z_laser_projector</url>
  <author email="rluque@catec.aero">Rafael Luque </author>
  <author email="imlara@catec.aero">Ines M. Lara </author>
  <maintainer email="rluque@catec.aero">Rafael Luque </maintainer>
  <maintainer email="imlara@catec.aero">Ines M. Lara </maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>z_laser_msgs</exec_depend>
  <exec_depend>z_laser_zlp1</exec_depend>
  <exec_depend>z_laser_gui</exec_depend>
  <exec_depend>z_laser_viz</exec_depend>

  <export>
      <metapackage/>
  </export>

</package>