<?xml version="1.0"?>
<package format="2">
  <name>z_laser_viz</name>
  <version>0.0.0</version>
  <description>
    <p>
      z_laser_viz provides a visualizer for laser projections 
      in RViz of the user-defined elements and locates the origin axes of 
      reference systems. This package is used in combination with z_laser_zlp1
      to ease the use and configuration of the projector.
    </p>
  </description>
  <url>http://wiki.ros.org/z_laser_viz</url>
  <author email="rluque@catec.aero">Rafael Luque </author>
  <author email="imlara@catec.aero">Ines M. Lara </author>
  <maintainer email="rluque@catec.aero">Rafael Luque </maintainer>
  <maintainer email="imlara@catec.aero">Ines M. Lara </maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>z_laser_zlp1</build_depend>
  <build_depend>z_laser_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>z_laser_zlp1</build_export_depend>
  <build_export_depend>z_laser_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>z_laser_zlp1</exec_depend>
  <exec_depend>z_laser_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>    
  </export>
  
</package>