<?xml version="1.0"?>
<package format="2">
  <name>z_laser_zlp1</name>
  <version>0.0.0</version>
  <description>
    <p>
      This package is a ROS wrapper that set up the 
      communication and control of the ZLP1 Z-LASER Projector, 
      making it fully compatible with all available sensors and 
      devices running over the ROS-Industrial project. For that 
      purpose, it provides a ROS API that expose the different 
      functionalities offered by the device.
    </p>
  </description>
  <url>http://wiki.ros.org/z_laser_zlp1</url>
  <author email="rluque@catec.aero">Rafael Luque </author>
  <author email="imlara@catec.aero">Ines M. Lara </author>
  <maintainer email="rluque@catec.aero">Rafael Luque </maintainer>
  <maintainer email="imlara@catec.aero">Ines M. Lara </maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>z_laser_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>z_laser_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>z_laser_msgs</exec_depend>

  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>    
  </export>

</package>